other-cel/require-pod-priorityclassname/.chainsaw-test/policy-ready.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-pod-priorityclassname
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
